--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ owner:
   bio: "A guy who loves technology and new challenges!"
   email: msmagnanijr@gmail.com
   disqus-shortname: mmagnani
-  twitter: #username
+  twitter: msmagnanijr
   facebook: #username
   google:
     plus: #username
