--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ owner:
     plus: #username
     analytics: UA-154917724-1
     verify:
-    ad-client: "ca-pub-3315278657740846"
-    ad-slot: 5088684753 
+    #ad-client: "ca-pub-3315278657740846"
+    #ad-slot: 5088684753 
   bing-verify:
   github: msmagnanijr
   stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
